@@ -64,13 +64,13 @@ public class BasicCrawler extends WebCrawler {
     String parentUrl = page.getWebURL().getParentUrl();
     String anchor = page.getWebURL().getAnchor();
 
-    System.out.println("Docid: " + docid);
-    System.out.println("URL: " + url);
-    System.out.println("Domain: '" + domain + "'");
-    System.out.println("Sub-domain: '" + subDomain + "'");
-    System.out.println("Path: '" + path + "'");
-    System.out.println("Parent page: " + parentUrl);
-    System.out.println("Anchor text: " + anchor);
+    logger.debug("Docid: {}", docid);
+    logger.info("URL: ", url);
+    logger.debug("Domain: '{}'", domain);
+    logger.debug("Sub-domain: '{}'", subDomain);
+    logger.debug("Path: '{}'", path);
+    logger.debug("Parent page: {}", parentUrl);
+    logger.debug("Anchor text: {}", anchor);
 
     if (page.getParseData() instanceof HtmlParseData) {
       HtmlParseData htmlParseData = (HtmlParseData) page.getParseData();
@@ -78,19 +78,19 @@ public class BasicCrawler extends WebCrawler {
       String html = htmlParseData.getHtml();
       Set<WebURL> links = htmlParseData.getOutgoingUrls();
 
-      System.out.println("Text length: " + text.length());
-      System.out.println("Html length: " + html.length());
-      System.out.println("Number of outgoing links: " + links.size());
+      logger.debug("Text length: {}", text.length());
+      logger.debug("Html length: {}", html.length());
+      logger.debug("Number of outgoing links: {}", links.size());
     }
 
     Header[] responseHeaders = page.getFetchResponseHeaders();
     if (responseHeaders != null) {
-      System.out.println("Response headers:");
+      logger.debug("Response headers:");
       for (Header header : responseHeaders) {
-        System.out.println("\t" + header.getName() + ": " + header.getValue());
+        logger.debug("\t{}: {}", header.getName(), header.getValue());
       }
     }
 
-    System.out.println("=============");
+    logger.debug("=============");
   }
 }
