@@ -21,6 +21,8 @@ import edu.uci.ics.crawler4j.crawler.Page;
 import edu.uci.ics.crawler4j.crawler.WebCrawler;
 import edu.uci.ics.crawler4j.parser.HtmlParseData;
 import edu.uci.ics.crawler4j.url.WebURL;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.Set;
 import java.util.regex.Pattern;
@@ -30,6 +32,7 @@ import java.util.regex.Pattern;
  */
 
 public class BasicCrawler extends WebCrawler {
+  private Logger logger = LoggerFactory.getLogger(BasicCrawler.class);
 
   private final static Pattern FILTERS = Pattern.compile(".*(\\.(css|js|bmp|gif|jpe?g" + "|png|tiff?|mid|mp2|mp3|mp4"
       + "|wav|avi|mov|mpeg|ram|m4v|pdf" + "|rm|smil|wmv|swf|wma|zip|rar|gz))$");
@@ -48,9 +51,9 @@ public class BasicCrawler extends WebCrawler {
     String url = page.getWebURL().getURL();
     int parentDocid = page.getWebURL().getParentDocid();
 
-    System.out.println("Docid: " + docid);
-    System.out.println("URL: " + url);
-    System.out.println("Docid of parent page: " + parentDocid);
+    logger.debug("Docid: {}", docid);
+    logger.info("URL: {}", url);
+    logger.debug("Docid of parent page: {}", parentDocid);
 
     if (page.getParseData() instanceof HtmlParseData) {
       HtmlParseData htmlParseData = (HtmlParseData) page.getParseData();
@@ -58,11 +61,11 @@ public class BasicCrawler extends WebCrawler {
       String html = htmlParseData.getHtml();
       Set<WebURL> links = htmlParseData.getOutgoingUrls();
 
-      System.out.println("Text length: " + text.length());
-      System.out.println("Html length: " + html.length());
-      System.out.println("Number of outgoing links: " + links.size());
+      logger.debug("Text length: {}", text.length());
+      logger.debug("Html length: {}", html.length());
+      logger.debug("Number of outgoing links: {}", links.size());
     }
 
-    System.out.println("=============");
+    logger.debug("=============");
   }
 }
