@@ -22,17 +22,20 @@ import edu.uci.ics.crawler4j.crawler.CrawlController;
 import edu.uci.ics.crawler4j.fetcher.PageFetcher;
 import edu.uci.ics.crawler4j.robotstxt.RobotstxtConfig;
 import edu.uci.ics.crawler4j.robotstxt.RobotstxtServer;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * @author Yasser Ganjisaffar [lastname at gmail dot com]
  */
 public class StatusHandlerCrawlController {
+  private static Logger logger = LoggerFactory.getLogger(StatusHandlerCrawlController.class);
 
   public static void main(String[] args) throws Exception {
     if (args.length != 2) {
-      System.out.println("Needed parameters: ");
-      System.out.println("\t rootFolder (it will contain intermediate crawl data)");
-      System.out.println("\t numberOfCralwers (number of concurrent threads)");
+      logger.info("Needed parameters: ");
+      logger.info("\t rootFolder (it will contain intermediate crawl data)");
+      logger.info("\t numberOfCralwers (number of concurrent threads)");
       return;
     }
 
